@@ -18,13 +18,17 @@
 package org.apache.solr.highlight;
 
 import org.apache.lucene.search.vectorhighlight.FragmentsBuilder;
+import org.apache.solr.common.params.SolrParams;
 
 public class ScoreOrderFragmentsBuilder extends SolrFragmentsBuilder {
 
   @Override
-  protected FragmentsBuilder getFragmentsBuilder(String[] preTags,
-      String[] postTags) {
-    return new org.apache.lucene.search.vectorhighlight.ScoreOrderFragmentsBuilder( preTags, postTags );
+  protected FragmentsBuilder getFragmentsBuilder( SolrParams params,
+      String[] preTags, String[] postTags ) {
+    org.apache.lucene.search.vectorhighlight.ScoreOrderFragmentsBuilder sofb =
+      new org.apache.lucene.search.vectorhighlight.ScoreOrderFragmentsBuilder( preTags, postTags );
+    sofb.setMultiValuedSeparator( getMultiValuedSeparatorChar( params ) );
+    return sofb;
   }
 
   ///////////////////////////////////////////////////////////////////////
